@@ -164,6 +164,9 @@ static const command_rec ruby_cmds[] =
      "set default $SAFE"},
     {"RubyOutputMode", ruby_cmd_output_mode, NULL, OR_ALL, TAKE1,
      "set output mode (nosync|sync|syncheader)"},
+    {"RubyRestrictDirectives", ruby_cmd_restrict_directives, NULL, 
+     RSRC_CONF, FLAG,
+     "whether Ruby* directives are restricted from .htaccess"},
     {"RubyHandler", ruby_cmd_handler, NULL, OR_ALL, TAKE1,
      "set ruby handler object"},
     {"RubyTransHandler", ruby_cmd_trans_handler, NULL, RSRC_CONF, TAKE1,
