@@ -27,6 +27,7 @@
  * SUCH DAMAGE.
  */
 
+#define CORE_PRIVATE
 #include "mod_ruby.h"
 #include "ruby_config.h"
 
@@ -46,6 +47,7 @@ void *ruby_create_server_config(pool *p, server_rec *s)
     conf->load_path = ap_make_array(p, 1, sizeof(char*));
     conf->env = ap_make_table(p, 1);
     conf->timeout = MR_DEFAULT_TIMEOUT;
+    conf->restrict_directives = MR_DEFAULT_RESTRICT_DIRECTIVES;
     conf->ruby_child_init_handler = NULL;
     return conf;
 }
@@ -79,6 +81,8 @@ void *ruby_merge_server_config(pool *p, void *basev, void *addv)
     }
     new->env = ap_overlay_tables(p, add->env, base->env);
     new->timeout = add->timeout ? add->timeout : base->timeout;
+    new->restrict_directives = add->restrict_directives ?
+	add->restrict_directives : base->restrict_directives;
     new->ruby_child_init_handler =
 	merge_handlers(p, base->ruby_child_init_handler,
 		       add->ruby_child_init_handler);
@@ -167,8 +171,47 @@ void *ruby_merge_dir_config(pool *p, void *basev, void *addv)
     return (void *) new;
 }
 
-const char *ruby_cmd_kanji_code(cmd_parms *cmd, ruby_dir_config *conf, char *arg)
+static int is_restrict_directives(server_rec *server)
 {
+    ruby_server_config *sconf = get_server_config(server);
+
+    return sconf->restrict_directives;
+}
+
+static int is_from_htaccess(cmd_parms *cmd, ruby_dir_config *conf)
+{
+    core_server_config *sconf;
+    int access_name_len;
+    int config_file_path_len;
+
+    if (cmd->path == NULL || conf == NULL) return 0;
+    sconf = ap_get_module_config(cmd->server->module_config, &core_module);
+
+    access_name_len = strlen(sconf->access_name);
+    if (cmd->config_file == NULL) return 0;
+    config_file_path_len = strlen(cmd->config_file->name);
+    if (config_file_path_len < access_name_len) return 0;
+    if (strcmp(cmd->config_file->name + config_file_path_len - access_name_len,
+	       sconf->access_name) != 0)
+	return 0;
+
+    return 1;
+}
+
+#define check_restrict_directives(cmd, dconf) { \
+    if (is_restrict_directives((cmd)->server) && \
+	is_from_htaccess((cmd), (dconf))) { \
+	return ap_psprintf(cmd->pool, \
+			   "RubyRestrictDirectives is enabled, " \
+			   "%s is not available in .htaccess", \
+			   cmd->cmd->name); \
+    } \
+}
+
+const char *ruby_cmd_kanji_code(cmd_parms *cmd, ruby_dir_config *conf,
+				char *arg)
+{
+    check_restrict_directives(cmd, conf)
     conf->kcode = ap_pstrdup(cmd->pool, arg);
     return NULL;
 }
@@ -177,6 +220,7 @@ const char *ruby_cmd_add_path(cmd_parms *cmd, ruby_dir_config *dconf, char *arg)
 {
     ruby_server_config *sconf;
 
+    check_restrict_directives(cmd, dconf)
     if (cmd->path == NULL) {
 	sconf = get_server_config(cmd->server);
 	*(char **) ap_push_array(sconf->load_path) = arg;
@@ -260,6 +304,7 @@ const char *ruby_cmd_require(cmd_parms *cmd, ruby_dir_config *dconf, char *arg)
     ruby_server_config *sconf = get_server_config(cmd->server);
     ruby_library_context *lib;
 
+    check_restrict_directives(cmd, dconf)
     if (ruby_running()) {
 	ruby_require(cmd->pool, arg, cmd->server, sconf, dconf);
     }
@@ -296,11 +341,19 @@ const char *ruby_cmd_pass_env(cmd_parms *cmd, void *dummy, char *arg)
 const char *ruby_cmd_set_env(cmd_parms *cmd, ruby_dir_config *conf,
 			     char *key, char *val)
 {
+    check_restrict_directives(cmd, conf)
     ap_table_set(conf->env, key, val);
     if (cmd->path == NULL) {
 	ruby_server_config *sconf = get_server_config(cmd->server);
 	ap_table_set(sconf->env, key, val);
     }
+    return NULL;
+}
+
+const char *ruby_cmd_restrict_directives(cmd_parms *cmd, void *dummy, int flag)
+{
+    ruby_server_config *sconf = get_server_config(cmd->server);
+    sconf->restrict_directives = flag;
     return NULL;
 }
 
@@ -314,6 +367,7 @@ const char *ruby_cmd_timeout(cmd_parms *cmd, void *dummy, char *arg)
 
 const char *ruby_cmd_safe_level(cmd_parms *cmd, ruby_dir_config *conf, char *arg)
 {
+    check_restrict_directives(cmd, conf)
     if (cmd->path == NULL && !cmd->server->is_virtual) {
 	conf->safe_level = default_safe_level = atoi(arg);
     }
@@ -325,6 +379,7 @@ const char *ruby_cmd_safe_level(cmd_parms *cmd, ruby_dir_config *conf, char *arg
 
 const char *ruby_cmd_output_mode(cmd_parms *cmd, ruby_dir_config *conf, char *arg)
 {
+    check_restrict_directives(cmd, conf)
     if (strcasecmp(arg, "nosync") == 0) {
 	conf->output_mode = MR_OUTPUT_NOSYNC;
     }
@@ -342,48 +397,56 @@ const char *ruby_cmd_output_mode(cmd_parms *cmd, ruby_dir_config *conf, char *ar
 
 const char *ruby_cmd_handler(cmd_parms *cmd, ruby_dir_config *conf, char *arg)
 {
+    check_restrict_directives(cmd, conf)
     push_handler(cmd->pool, conf->ruby_handler, arg);
     return NULL;
 }
 
 const char *ruby_cmd_trans_handler(cmd_parms *cmd, ruby_dir_config *conf, char *arg)
 {
+    check_restrict_directives(cmd, conf)
     push_handler(cmd->pool, conf->ruby_trans_handler, arg);
     return NULL;
 }
 
 const char *ruby_cmd_authen_handler(cmd_parms *cmd, ruby_dir_config *conf, char *arg)
 {
+    check_restrict_directives(cmd, conf)
     push_handler(cmd->pool, conf->ruby_authen_handler, arg);
     return NULL;
 }
 
 const char *ruby_cmd_authz_handler(cmd_parms *cmd, ruby_dir_config *conf, char *arg)
 {
+    check_restrict_directives(cmd, conf)
     push_handler(cmd->pool, conf->ruby_authz_handler, arg);
     return NULL;
 }
 
 const char *ruby_cmd_access_handler(cmd_parms *cmd, ruby_dir_config *conf, char *arg)
 {
+    check_restrict_directives(cmd, conf)
     push_handler(cmd->pool, conf->ruby_access_handler, arg);
     return NULL;
 }
 
 const char *ruby_cmd_type_handler(cmd_parms *cmd, ruby_dir_config *conf, char *arg)
 {
+    check_restrict_directives(cmd, conf)
     push_handler(cmd->pool, conf->ruby_type_handler, arg);
     return NULL;
 }
 
 const char *ruby_cmd_fixup_handler(cmd_parms *cmd, ruby_dir_config *conf, char *arg)
 {
+    check_restrict_directives(cmd, conf)
     push_handler(cmd->pool, conf->ruby_fixup_handler, arg);
     return NULL;
 }
 
 const char *ruby_cmd_log_handler(cmd_parms *cmd, ruby_dir_config *conf, char *arg)
 {
+    check_restrict_directives(cmd, conf)
     push_handler(cmd->pool, conf->ruby_log_handler, arg);
     return NULL;
 }
@@ -391,6 +454,7 @@ const char *ruby_cmd_log_handler(cmd_parms *cmd, ruby_dir_config *conf, char *ar
 const char *ruby_cmd_header_parser_handler(cmd_parms *cmd,
 					   ruby_dir_config *conf, char *arg)
 {
+    check_restrict_directives(cmd, conf)
     push_handler(cmd->pool, conf->ruby_header_parser_handler, arg);
     return NULL;
 }
@@ -398,6 +462,7 @@ const char *ruby_cmd_header_parser_handler(cmd_parms *cmd,
 const char *ruby_cmd_post_read_request_handler(cmd_parms *cmd,
 					       ruby_dir_config *conf, char *arg)
 {
+    check_restrict_directives(cmd, conf)
     push_handler(cmd->pool, conf->ruby_post_read_request_handler, arg);
     return NULL;
 }
@@ -405,6 +470,7 @@ const char *ruby_cmd_post_read_request_handler(cmd_parms *cmd,
 const char *ruby_cmd_init_handler(cmd_parms *cmd,
 				  ruby_dir_config *conf, char *arg)
 {
+    check_restrict_directives(cmd, conf)
     push_handler(cmd->pool, conf->ruby_init_handler, arg);
     return NULL;
 }
@@ -412,6 +478,7 @@ const char *ruby_cmd_init_handler(cmd_parms *cmd,
 const char *ruby_cmd_cleanup_handler(cmd_parms *cmd,
 				     ruby_dir_config *conf, char *arg)
 {
+    check_restrict_directives(cmd, conf)
     push_handler(cmd->pool, conf->ruby_cleanup_handler, arg);
     return NULL;
 }
